test/errors/error32.vult
fun foo() {
  val x = 1;
  mem x = 0;
}